gcc/testsuite/gdc.test/compilable/test9692a.d
module test9692a;
int j;
