gcc/testsuite/gdc.test/fail_compilation/imports/b17630.d
module b17630;

int Erase;
